# x11-touchscreen-calibrator

./: 75x11-touchscreen-calibrator.in  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  index.html  x11-touchscreen-calibrator.1  x11-touchscreen-calibrator.c  x11-touchscreen-calibrator.spec  x11-touchscreen-calibrator_0.0.orig.tar.xz.delta  x11-touchscreen-calibrator_0.0.orig.tar.xz.id  x11-touchscreen-calibrator_0.1.orig.tar.xz.delta  x11-touchscreen-calibrator_0.1.orig.tar.xz.id  x11-touchscreen-calibrator_0.2.orig.tar.xz.delta  x11-touchscreen-calibrator_0.2.orig.tar.xz.id  x11-ts-cal.c
debian/: changelog  control  copyright  docs  rules  watch
debian/upstream/: signing-key.pgp
